<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/fragmentStartFrame">

    <fragment
        android:id="@+id/fragmentStartFrame"
        android:name="com.example.trackyourruns.FragmentStartFrame"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start_frame" >
        <action
            android:id="@+id/action_fragmentStartFrame_to_fragmentEditRoutes"
            app:destination="@id/fragmentEditRoutes" />
        <action
            android:id="@+id/action_fragmentStartFrame_to_fragmentAddRun"
            app:destination="@id/fragmentAddRun" />
        <action
            android:id="@+id/action_fragmentStartFrame_to_fragmentManageRuns"
            app:destination="@id/fragmentManageRuns" />
        <action
            android:id="@+id/action_fragmentStartFrame_to_fragmentSettings"
            app:destination="@id/fragmentSettings" />
    </fragment>

    <fragment
        android:id="@+id/fragmentAddRoute"
        android:name="com.example.trackyourruns.FragmentAddRoute"
        android:label="@string/add_route"
        tools:layout="@layout/fragment_add_route" >
    </fragment>

    <fragment
        android:id="@+id/fragmentEditRoutes"
        android:name="com.example.trackyourruns.FragmentEditRoutes"
        android:label="@string/edit_routes"
        tools:layout="@layout/fragment_edit_routes" >
        <action
            android:id="@+id/action_fragmentEditRoutes_to_fragmentAddRoute"
            app:destination="@id/fragmentAddRoute" />
    </fragment>

    <fragment
        android:id="@+id/fragmentAddRun"
        android:name="com.example.trackyourruns.FragmentAddRun"
        android:label="@string/add_run" />
    <fragment
        android:id="@+id/fragmentCompareRoute"
        android:name="com.example.trackyourruns.FragmentCompareRoute"
        android:label="@string/compare_route"
        tools:layout="@layout/fragment_compare_route" >
        <action
            android:id="@+id/action_fragmentCompareRoute_self"
            app:destination="@id/fragmentCompareRoute"
            app:popUpTo="@+id/navigation"
            app:popUpToInclusive="true"/>
        <!--popUp for navigating to StartFrame after pressing 'up'-->
    </fragment>

    <fragment
        android:id="@+id/fragmentSelectRouteToCompare"
        android:name="com.example.trackyourruns.FragmentSelectRouteToCompare"
        android:label="@string/select_route_compare"
        tools:layout="@layout/fragment_select_route_to_compare" >
        <action
            android:id="@+id/action_fragmentSelectRouteToCompare_to_fragmentCompareRoute"
            app:destination="@id/fragmentCompareRoute" />
    </fragment>

    <fragment
        android:id="@+id/fragmentStatistics"
        android:name="com.example.trackyourruns.FragmentStatistics"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/fragmentManageRuns"
        android:name="com.example.trackyourruns.FragmentManageRuns"
        android:label="@string/manage_runs"
        tools:layout="@layout/fragment_manage_runs" >
        <action
            android:id="@+id/action_fragmentManageRuns_to_fragmentAddRun"
            app:destination="@id/fragmentAddRun" />
    </fragment>

    <fragment
        android:id="@+id/fragmentSettings"
        android:name="com.example.trackyourruns.FragmentSettings"
        android:label="@string/settings" />
</navigation>