<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentAddRoute">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayout_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/route_name"
        android:layout_marginTop="@dimen/margin_xs"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginStart="@dimen/margin_xs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxt_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayout_Distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/distance"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginStart="@dimen/margin_xs"
        app:suffixText="@string/distance_measure"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayout_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTxt_Distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="@dimen/btn_width_long"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xs"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayout_Distance"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="@dimen/btn_width_medium"
        android:layout_marginStart="@dimen/margin_xs"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save"
        android:text="@string/delete"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>