<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btn_addRun"
        android:layout_height="@dimen/btn_width_long"
        android:layout_width="@dimen/btn_width_long"
        android:background="@drawable/background_round_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_run"
        style="@style/TextStyleButtonAddRun"/>

    <!--Total Km-->
    <TextView
        android:id="@+id/txtView_startFrameTotalKmHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_total_km"
        android:layout_marginTop="@dimen/start_frame_text_view_margin"
        android:layout_marginStart="@dimen/start_frame_text_view_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextStyleStartHeadline"/>

    <TextView
        android:id="@+id/txtView_startFrameTotalKmValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtView_startFrameTotalKmHeadline"
        app:layout_constraintTop_toBottomOf="@id/txtView_startFrameTotalKmHeadline"
        style="@style/TextStyleStartValue"/>

    <!--Total Time-->
    <TextView
        android:id="@+id/txtView_startFrameTotalTimeHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_total_time"
        android:gravity="end"
        android:layout_marginTop="@dimen/start_frame_text_view_margin"
        android:layout_marginEnd="@dimen/start_frame_text_view_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextStyleStartHeadline"/>

    <TextView
        android:id="@+id/txtView_startFrameTotalTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@id/txtView_startFrameTotalTimeHeadline"
        app:layout_constraintTop_toBottomOf="@id/txtView_startFrameTotalTimeHeadline"
        style="@style/TextStyleStartValue"/>

    <!--Favourite Route-->
    <TextView
        android:id="@+id/txtView_startFrameFavRouteHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_favourite_route"
        app:layout_constraintStart_toStartOf="@id/txtView_startFrameFavRouteValue"
        app:layout_constraintBottom_toTopOf="@id/txtView_startFrameFavRouteValue"
        style="@style/TextStyleStartHeadline"/>

    <TextView
        android:id="@+id/txtView_startFrameFavRouteValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/start_frame_text_view_margin"
        android:layout_marginStart="@dimen/start_frame_text_view_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TextStyleStartValue"/>

    <!--Average Time/Km-->
    <TextView
        android:id="@+id/txtView_startFrameAverageKmTimeHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_average_km_time"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@id/txtView_startFrameAverageKmTimeValue"
        app:layout_constraintBottom_toTopOf="@id/txtView_startFrameAverageKmTimeValue"
        style="@style/TextStyleStartHeadline"/>

    <TextView
        android:id="@+id/txtView_startFrameAverageKmTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginBottom="@dimen/start_frame_text_view_margin"
        android:layout_marginEnd="@dimen/start_frame_text_view_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TextStyleStartValue"/>

</androidx.constraintlayout.widget.ConstraintLayout>