<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout_dateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xs"
            android:layout_marginEnd="@dimen/margin_xs"
            android:layout_weight="1"
            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTxt_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date" />
            <!--focusable="false" to open picker directly-->
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_xs"
            android:layout_weight="1"
            android:hint="@string/start_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTxt_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayout_Routes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_route"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginStart="@dimen/margin_xs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_dateTime">

        <AutoCompleteTextView
            android:id="@+id/autoTxtView_Route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:id="@+id/scrollView_routes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginStart="@dimen/margin_xs"
        app:layout_constraintBottom_toTopOf="@id/txtView_intensity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayout_Routes">

        <LinearLayout
            android:id="@+id/linearLayout_Km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <TextView
        android:id="@+id/txtView_intensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intensity"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginStart="@dimen/margin_xs"
        app:layout_constraintBottom_toTopOf="@id/slider_intensity"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_intensity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="10"
        android:layout_marginEnd="@dimen/margin_xs"
        android:layout_marginStart="@dimen/margin_xs"
        app:layout_constraintBottom_toTopOf="@id/btn_saveRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_saveRun"
        android:layout_width="@dimen/btn_width_long"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginEnd="@dimen/margin_xs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_deleteRun"
        android:layout_width="@dimen/btn_width_medium"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:visibility="invisible"
        android:layout_marginStart="@dimen/margin_xs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_saveRun" />


</androidx.constraintlayout.widget.ConstraintLayout>